Simplify commands and improve jv error handling
- Add help command alias for jv - Improve parser error message
formatting - Fix code formatting in jvv commands

--- a/locales/help_docs/en.yml
+++ b/locales/help_docs/en.yml
@@ -346,6 +346,10 @@ jv:
       The directory `%{path}` cannot be found!
 
     parse:
+      parser_failed: |
+        Incorrect command input!
+        Please use `jv -h` to view help
+
       str_to_sockaddr: |
         Error: %{err}
         Cannot recognize *`%{str}`* as a valid address, please check your input!
