--- a/locales/help_docs/zh-CN.yml
+++ b/locales/help_docs/zh-CN.yml
@@ -9,20 +9,20 @@ jvv:
     **注意**：它能直接操作库的数据，请谨慎使用！*（能力越大，责任越大）*
 
     **创建库**：
-      create <名称>   在给定的目录名称中创建库
-      init            在当前目录中创建库
+      create <名称> - 在给定的目录名称中创建库
+      init          - 在当前目录中创建库
 
     **查询**：
-      here            查询当前库的信息
+      here - 查询当前库的信息
 
     **成员管理**：
       member [list|register|remove]
-        list                 列出成员
-        register <成员名称>  注册成员
-        remove   <成员名称>  移除成员
+        list                - 列出成员
+        register <成员名称> - 注册成员
+        remove   <成员名称> - 移除成员
 
     **服务**：
-      service listen  运行服务端
+      service listen - 运行服务端
 
     另外，您可以使用 jvv <命令名称> --help 来查询更详细的帮助！
 
@@ -137,48 +137,45 @@ jv:
       jv u 下载最新信息，jv t 追踪文件，jv mv -a 自动移动文件，jv in/out 导入或导出文件
 
     **工作区**：
-      create <名称>      创建工作区
-      init               当前目录创建工作区
+      create <名称> - 创建工作区
+      init          - 当前目录创建工作区
 
     **上游库**：
-      direct <上游地址>  定向到工作区到上游库
-
-      unstain            祛色工作区，清除关联
+      direct <上游地址> - 定向到工作区到上游库
+      unstain           - 祛色工作区，清除关联
 
     **账户**：
       account [list|as|add|remove|movekey]
-        list                列出所有账户
-        as      <账户名称>  设置该工作区使用的账户
+        list                  - 列出所有账户
+        as      <账户名称>    - 设置该工作区使用的账户
 
-        add     <账户名称>  为当前计算机添加账户
-        remove  <账户名称>  从计算机删除账户
+        add     <账户名称>    - 为当前计算机添加账户
+        remove  <账户名称>    - 从计算机删除账户
 
-        movekey <账户名称> <私钥文件>  移动私钥文件到指定账户
+        movekey <账户> <私钥> - 移动私钥文件到指定账户
 
     **信息同步**：
-      update  下载最新的信息
+      update - 下载最新的信息
 
     **表操作**：
       sheet [list|use|exit]
-        list  列出所有表
-        use   使用表，并开始工作
-        exit  退出表，清除当前修改
+        list - 列出所有表
+        use  - 使用表，并开始工作
+        exit - 退出表，清除当前修改
 
     **文件传递**
-      import <文件包名称>     从导入区导入文件
-      import <参照表中目录>   从参照表导入文件
-      export <文件> <表名称> -m <描述> -n <文件包名称>  导出文件到其他表
+      import <文件包名称>   - 从导入区导入文件
+      import <参照表中目录> - 从参照表导入文件
+      export <文件> <表名称> -m <描述> -n <文件包名称> - 导出文件到其他表
 
     **文件操作**
-      move <文件> <到>  安全地重命名文件
-      move auto         自动处理本地文件的移动或重命名
-      track <文件>      追踪、上传文件到上游库
+      move <文件> <到> - 安全地重命名文件
+      move auto        - 自动处理本地文件的移动或重命名
+      track <文件>     - 追踪、上传文件到上游库
 
     **内建文档**
-      docs list         列出所有可用的文档
-      docs <文档名称>   查看指定文档的内容
-      或 jv docs <文档名称> -e  返回特定文档的临时路径以供编辑器打开
-      **例如**：jv docs get-started -e | nano
+      docs list        - 列出所有可用的文档
+      docs <文档名称>  - 查看指定文档的内容
 
     您可以使用 jv <命令名称> --help 来查询更详细的帮助！
 
