--- a/locales/help_docs/zh-CN.yml
+++ b/locales/help_docs/zh-CN.yml
@@ -164,9 +164,9 @@ jv:
         exit - 退出表，清除当前修改
 
     **文件传递**
-      import <文件包名称>   - 从导入区导入文件
-      import <参照表中目录> - 从参照表导入文件
-      export <文件> <表名称> -m <描述> -n <文件包名称> - 导出文件到其他表
+      import <文件包名称>    - 从导入区导入文件
+      import <参照表中目录>  - 从参照表导入文件
+      export <文件> <表名称> - 导出文件到其他表
 
     **文件操作**
       move <文件> <到> - 安全地重命名文件
