Add compile-time version and build information
- Add build script to generate compile_info.rs with build metadata -
Include version, build date, target platform, and toolchain info - Add
version command to both jv and jvv binaries - Update help documentation
with version information - Ignore generated compile_info.rs in git

--- a/locales/help_docs/en.yml
+++ b/locales/help_docs/en.yml
@@ -3,6 +3,17 @@ common:
     Confirm to perform the above operation? (Y/n):
 
 jvv:
+  version:
+    header: |
+      JustEnoughVCS Upstream Vault Manager
+        VERSION - %{version}
+
+    compile_info: |
+      Compile Info
+        Compile Date - %{build_time}
+              Target - %{build_target}
+            Platform - %{build_platform} - %{build_toolchain}
+
   help: |
     **JustEnoughVCS Upstream Vault Commands**
     This program directly creates, manages, and runs JustEnoughVCS upstream vaults.
@@ -135,8 +146,19 @@ jvv:
       listen_done: Server shutdown!
 
 jv:
+  version:
+    header: |
+      JustEnoughVCS
+        VERSION - %{version}
+
+    compile_info: |
+      Compile Info
+        Compile Date - %{build_time}
+              Target - %{build_target}
+            Platform - %{build_platform} - %{build_toolchain}
+
   help: |
-    **JustEnoughVCS Local Workspace Commands**
+    **JustEnoughVCS**
     This program connects to upstream vaults to synchronize and commit changes to local workspace files for collaborative work.
 
     **ALIASES**:
