--- a/locales/help_docs/zh-CN.yml
+++ b/locales/help_docs/zh-CN.yml
@@ -378,6 +378,15 @@ jv:
     direct: |
       是否需要将当前本地工作区定向到上游库 %{upstream}？
 
+    sheet:
+      make:
+        restore: |
+          似乎 `%{sheet_name}` 是一张无人认领的表，是否拿到它的所有权？
+          如果您不想拿到该表，请使用别的名称建立表
+
+      drop: |
+        是否要放弃表 `%{sheet_name}` 的所有权，此后，您将无法在表中工作！
+
   fail:
     path_not_found: |
       您给出的目录 `%{path}` 无法找到！
@@ -401,6 +410,7 @@ jv:
       list: 获取账户列表失败！
       move_key: 将该私钥移动至账户目录失败！
       not_found: 无法找到账户 `%{account}`!
+      as: 设置当前账户失败，请确保当前表已退出
 
     init_create_dir_not_empty: |
       当前目录并不是空的！
@@ -453,7 +463,7 @@ jv:
     sheet:
       list:
         your_sheet: |
-          **你的表**：
+          **您的表**：
         your_sheet_item: |
           %{number}. %{name}
         your_sheet_item_use: |
@@ -465,10 +475,10 @@ jv:
         other_sheet_item_no_holder: |
           %{number}. %{name}（无人认领）
         tip_has_sheet: |
-          你可以使用 `jv use <表名>` 开始工作
+          您不在任何一张表，可使用 `jv use <表名>` 使用一张表
         tip_no_sheet: |
           **没有可以编辑的表！**
-          你可以使用 `jv sheet make <表名>` 创建一张新表
+          您没有任何一张表，可使用 `jv make <表名>` 创建一张新表
 
   result:
     common:
@@ -503,7 +513,35 @@ jv:
         success: |
           成功创建表 `%{name}`！
           上游信息已变更，请使用 `jv update` 同步至最新信息
+
+        success_restore: |
+          成功恢复表 `%{name}` 的所有权！
+          上游信息已变更，请使用 `jv update` 同步至最新信息
+
         sheet_already_exists: |
           表 `%{name}` 已存在！
+
         sheet_creation_failed: |
           表创建失败：`%{err}`
+
+      drop:
+        success: |
+          成功放弃表 `%{name}` 的所有权！
+          上游信息已变更，请使用 `jv update` 同步至最新信息
+          **提示**：您可以使用 `jv make %{name}` 赎回该表
+
+        sheet_in_use: |
+          表 `%{name}` 正在被使用中，无法放弃！
+          **提示**：请先 `jv exit` 退出当前表，再尝试该操作！
+
+        sheet_not_exists: |
+          表 `%{name}` 不存在！
+
+        sheet_drop_failed: |
+          放弃表失败：%{err}
+
+        no_holder: |
+          表 `%{name}` 没有持有人！
+
+        not_owner: |
+          您不是表 `%{name}` 的持有人，无法放弃该表！
